added the top image on the home page and sized it correctly

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Henderson
             Wellbeing
         </h1>
-        <img src="images/personintree.ai" alt="">
+        <img src="images/personintree.svg" class="mainimg">
     </div>
     <div class="pillar1">
         <h3>Yoga</h3>
