--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h2>Hayley Henderson</h2>
+        <p class="name">Hayley Henderson</p>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Classes</a></li>
@@ -19,14 +19,10 @@
             </ul>
     </header>
     <div class="card1">
-        <h2>Welcome
-            To
-
-        </h2>
-        <h1>Hayley
-            Henderson
-            Wellbeing
-        </h1>
+        <div class="introtext">
+            <h2>Welcome<br>To</h2>
+            <h1>Hayley<br>Henderson<br>Wellbeing</h1>
+        </div>
         <img src="images/personintree.svg" class="mainimg">
     </div>
     <div class="pillar1">
