I used a color picker to identify the exact colors from the prototype an applied them to my website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hayley Henderson</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <p class="name">Hayley Henderson</p>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
