I added the websites logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header id="header">
+        <img src="images/logo.svg" alt="">
         <p class="name">Hayley Henderson</p>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
