added the font lato from google fonts and then applied it to the text in the pillars as well as changing the colour of the text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Prata&display=swap" rel="stylesheet">
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Hayley Henderson</title>
@@ -30,11 +31,11 @@
     </div>
     <div class="pillar1">
         <h3>Yoga</h3>
-        <p>Yoga is an excersise that focusses on movement, breathing and posture to bring spiritual awareness to the invidivduals body and mind, ultimately improving the body and mind. Practising yoga can greatly improve the wellbeing of the individual as it also promotes relaxation, which can help sleep and the individuals health. This results in a clearer mind.</p>
+        <p>Yoga is an excersise that focusses on movement, breathing and posture to bring spiritual awareness to the invidivduals body and mind, ultimately improving the body and mind. Practising yoga can greatly improve the wellbeing of the individual as it also promotes relaxation, which can help sleep and improve the individuals health. This results in a clearer mind.</p>
     </div>
     <div class="pillar2">
         <h3>Positivity</h3>
-        <p>Positivity is an important aspect to an individuals wellbeing. It allows more openess to diffenrent activities that support wellbeing, for example the positive air around yoga makes participants more comfortable while carrying out the movements. Positivity can lead into the inviduals personal life by allowing them to be more optimistic, which lets them heandle tougher situations.</p>
+        <p>Positivity is an important aspect to an individuals wellbeing. It allows more openess to diffenrent activities that support wellbeing, for example the positive air around yoga makes participants more comfortable while carrying out the movements. Positivity can lead into the inviduals personal life by allowing them to be more optimistic, which lets them handle tougher situations.</p>
     </div>
     <div class="pillar3">
         <h3>Strength</h3>
