--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
         <img src="images/personintree.svg" class="mainimg">
     </div>
     <div class="pillar1">
+        <img src="images/pillar1img.svg" class="pillar1img">
         <h3>Yoga</h3>
         <p>Yoga is an excersise that focusses on movement, breathing and posture to bring spiritual awareness to the invidivduals body and mind, ultimately improving the body and mind. Practising yoga can greatly improve the wellbeing of the individual as it also promotes relaxation, which can help sleep and improve the individuals health. This results in a clearer mind.</p>
     </div>
     <div class="pillar2">
+        <img src="images/pillar2img.svg" class="pillar2img">
         <h3>Positivity</h3>
         <p>Positivity is an important aspect to an individuals wellbeing. It allows more openess to diffenrent activities that support wellbeing, for example the positive air around yoga makes participants more comfortable while carrying out the movements. Positivity can lead into the inviduals personal life by allowing them to be more optimistic, which lets them handle tougher situations.</p>
     </div>
     <div class="pillar3">
+        <img src="images/pillar3img.svg" class="pillar3img">
         <h3>Strength</h3>
         <p>Strength is important to wellbeing, as carrying out activities that support wellbeing results in a stong body and mind. Having a strong mind can allow an individual to endure through tough situations as well as focus on achieving harmony. Having a stronger body allows an individual to be healthier and be more comfortable in their own body which is important to spiritality.</p>
     </div>
