Added card2 to css so I can begin adding new content

--- a/classes.html
+++ b/classes.html
@@ -24,10 +24,13 @@
     </header>
     <div class="card1">
         <div class="introtext">
-            <h2>Welcome<br>To</h2>
-            <h1>Hayley<br>Henderson<br>Wellbeing</h1>
+            <h2>Introduction<br>To</h2>
+            <h1>Online<br>Classes</h1>
         </div>
         <img src="images/personintree.svg" class="mainimg">
+    </div>
+    <div class="card2">
+        
     </div>
 </body>
 </html>
