Added content to card2 and linked the classes page and home page

--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,7 @@
         <img src="images/logo.svg" alt="">
         <p class="name">Hayley Henderson</p>
             <ul class="nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Classes</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -30,7 +30,12 @@
         <img src="images/personintree.svg" class="mainimg">
     </div>
     <div class="card2">
-        
+        <div class="contentcard">
+            <h3>Overview</h3>
+            <p>6-week remote working employee wellbeing programme
+                Each week will consist of short videos to watch (max ten mins) and related activities to complete around specific topics.  
+                Topics are aimed at supporting employee productivity by providing tools to boost wellbeing and promote positive behavioural changes.</p>
+        </div>
     </div>
 </body>
 </html>
