--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="name">Hayley Henderson</p>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Classes</a></li>
+                <li><a href="classes.html">Classes</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
