--- a/classes.html
+++ b/classes.html
@@ -24,7 +24,7 @@
     </header>
     <div class="card1">
         <div class="introtext">
-            <h2>Introduction<br>To</h2>
+            <h2><br>Introduction<br>To</h2>
             <h1>Online<br>Classes</h1>
         </div>
         <img src="images/personintree.svg" class="mainimg">
