Finished the text sizing

--- a/classes.html
+++ b/classes.html
@@ -32,8 +32,8 @@
     <div class="card2">
         <div class="contentcard">
             <h3>Overview</h3>
-            <p>6-week remote working employee wellbeing programme
-                Each week will consist of short videos to watch (max ten mins) and related activities to complete around specific topics.  
+            <p>6-week remote working employee wellbeing programme<br>
+                Each week will consist of short videos to watch (max ten mins) and related activities to complete around specific topics.<br> 
                 Topics are aimed at supporting employee productivity by providing tools to boost wellbeing and promote positive behavioural changes.</p>
         </div>
     </div>
