Imported and resized the main image on this page

--- a/classes.html
+++ b/classes.html
@@ -27,7 +27,7 @@
             <h2><br>Introduction<br>To</h2>
             <h1>Online<br>Classes</h1>
         </div>
-        <img src="images/personintree.svg" class="mainimg">
+        <img src="images/computer.svg" class="mainimg">
     </div>
     <div class="card2">
         <div class="contentcard">
