createtd the third card for the classes, by week, and put the content in a grid on it

--- a/classes.html
+++ b/classes.html
@@ -37,5 +37,16 @@
                 Topics are aimed at supporting employee productivity by providing tools to boost wellbeing and promote positive behavioural changes.</p>
         </div>
     </div>
+    <div class="classcard1" id="classcard1">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left">
+            <h3>Week One</h3>
+            <p>Supporting your own wellbeing at home and getting started with your journey (video)<br>
+                Wellbeing and work activity<br>
+                Using online journal (once a week entry)<br>
+                One to one review (once a week meeting)<br></p>
+            <img src="images/arrowright.svg" alt="" class="right">
+        </div>        
+    </div>
 </body>
 </html>
