begun adding javascript to allow user to switch between classes on the classes page

--- a/classes.html
+++ b/classes.html
@@ -39,13 +39,24 @@
     </div>
     <div class="classcard1" id="classcard1">
         <div class="classcard">
-            <img src="images/arrowleft.svg" alt="" class="left">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left1">
             <h3>Week One</h3>
             <p>Supporting your own wellbeing at home and getting started with your journey (video)<br>
                 Wellbeing and work activity<br>
                 Using online journal (once a week entry)<br>
                 One to one review (once a week meeting)<br></p>
-            <img src="images/arrowright.svg" alt="" class="right">
+            <img src="images/arrowright.svg" alt="" class="right" id="right1">
+        </div>        
+    </div>
+    <div class="classcard2" id="classcard2">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left2">
+            <h3>Week One</h3>
+            <p>Supporting your own wellbeing at home and getting started with your journey (video)<br>
+                Wellbeing and work activity<br>
+                Using online journal (once a week entry)<br>
+                One to one review (once a week meeting)<br></p>
+            <img src="images/arrowright.svg" alt="" class="right" id="right2">
         </div>        
     </div>
 </body>
