added the javascript to switch from any class

--- a/classes.html
+++ b/classes.html
@@ -51,12 +51,61 @@
     <div class="classcard2" id="classcard2">
         <div class="classcard">
             <img src="images/arrowleft.svg" alt="" class="left" id="left2">
-            <h3>Week One</h3>
-            <p>Supporting your own wellbeing at home and getting started with your journey (video)<br>
-                Wellbeing and work activity<br>
-                Using online journal (once a week entry)<br>
-                One to one review (once a week meeting)<br></p>
+            <h3>Week Two</h3>
+            <p>The home working environment - Posture (video), separating work from home (video)<br>
+                Home working activity<br>
+                Online journal (once a week entry)<br>
+                One to one review (once a week meeting)
+                </p>
             <img src="images/arrowright.svg" alt="" class="right" id="right2">
+        </div>        
+    </div>
+    <div class="classcard3" id="classcard3">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left3">
+            <h3>Week Three</h3>
+            <p>The home working environment - Posture (video), separating work from home (video)<br>
+                Home working activity<br>
+                Online journal (once a week entry)<br>
+                One to one review (once a week meeting)
+                </p>
+            <img src="images/arrowright.svg" alt="" class="right" id="right3">
+        </div>        
+    </div>
+    <div class="classcard4" id="classcard4">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left4">
+            <h3>Week Four</h3>
+            <p>The home working environment - Posture (video), separating work from home (video)<br>
+                Home working activity<br>
+                Online journal (once a week entry)<br>
+                One to one review (once a week meeting)
+                </p>
+            <img src="images/arrowright.svg" alt="" class="right" id="right4">
+        </div>        
+    </div>
+    <div class="classcard5" id="classcard5">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left5">
+            <h3>Week Five</h3>
+            <p>The home working environment - Posture (video), separating work from home (video)<br>
+                Home working activity<br>
+                Online journal (once a week entry)<br>
+                One to one review (once a week meeting)
+                </p>
+            <img src="images/arrowright.svg" alt="" class="right" id="right5">
+        </div>        
+    </div>
+    <div class="classcard6" id="classcard6">
+        <div class="classcard">
+            <img src="images/arrowleft.svg" alt="" class="left" id="left6">
+            <h3>Week Six</h3>
+            <p>The home working environment - Posture (video), separating work from home (video)<br>
+                Home working activity<br>
+                Online journal (once a week entry)<br>
+                One to one review (once a week meeting)
+                </p>
+            <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
 </body>
