Added the content to the about page

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <img src="images/logo.svg" alt="">
         <p class="name">Hayley Henderson</p>
             <ul class="nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="classes.html">Classes</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -24,10 +24,18 @@
     </header>
     <div class="card1">
         <div class="introtext">
-            <h2>About<br>Me</h2>
+            <h1><br>About<br>Me</h1>
         </div>
         <img src="images/personintree.svg" class="mainimg">
     </div>
-
+    <div class="card2">
+        <div class="contentcard">
+            <p>I am a parent, lecturer and have been a PhD student, so, it is safe to say that I know what a busy life is. I discovered yoga 20 years ago, and it has greatly improved my wellbeing, even to today through my busy lifestyle. On top of that I am a qualified yoga instructor meaning that my classes are high quality. 
+                <br>
+                Recent times have been tough and I persoanlly have been furthering my yoga experience by also practising wellbeing techniques and activities. So, because of these tough times I want to support workers in a corporate enviroments by improving their wellbeing, this will allow them to better deal with stress, as I have been doing myself. 
+                <br>
+                So through yoga and wellbeing related activities I aim to support corporate workers.</p>
+        </div>
+    </div>
 </body>
 </html>
