--- a/classes.html
+++ b/classes.html
@@ -18,7 +18,7 @@
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Classes</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
     </header>
