--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="classes.html">Classes</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
     </header>
