--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="introtext">
             <h1><br>About<br>Me</h1>
         </div>
-        <img src="images/personintree.svg" class="mainimg">
+        <img src="images/about.svg" class="mainimg">
     </div>
     <div class="card2">
         <div class="contentcard">
