--- a/contact.html
+++ b/contact.html
@@ -18,15 +18,15 @@
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="classes.html">Classes</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
     </header>
     <div class="card1">
         <div class="introtext">
-            <h1><br>About<br>Me</h1>
+            <h1><br>Contact<br>Us</h1>
         </div>
-        <img src="images/about.svg" class="mainimg">
+        <img src="images/social.svg" class="mainimg">
     </div>
 
 </body>
