--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,17 @@
         </div>
         <img src="images/social.svg" class="mainimg">
     </div>
-
+    <div class="questioncard">
+        <div class="contentcard">
+            <h3>Questions</h3>
+            <p>Fill out this form with your contact<br> information and a question so I can<br> reapond with an answer</p>
+        </div>
+    </div>
+    <div class="instacard">
+        <div class="contentcard">
+            <h3>Instagram</h3>
+            <p>Follow my instagram and explore my<br> posts as well as get in conact with<br> me through their.</p>
+        </div>
+    </div>
 </body>
 </html>
