Added the buttons to the contacts page

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
             <img src="images/questions.svg" alt=""class="questionimg">
             <h3>Questions</h3>
             <p>Fill out this form with your contact<br> information and a question so I can<br> reapond with an answer</p>
+            <button class="questionbutton" type="button">Open contact form</button>
         </div>
     </div>
     <div class="instacard">
@@ -40,6 +41,7 @@
             <img src="images/instagram.svg" alt="" class="instagramimg">
             <h3>Instagram</h3>
             <p>Follow my instagram and explore my<br> posts as well as get in conact with<br> me through their.</p>
+            <button class="instabutton" type="button">Visit Instagram</button>
         </div>
     </div>
 </body>
