I added a form to begin making the contact fomr on the contacts page

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,15 @@
         <div class="contentcard">
             <img src="images/instagram.svg" alt="" class="instagramimg">
             <h3>Instagram</h3>
-            <p>Follow my instagram and explore my<br> posts as well as get in conact with<br> me through their.</p>
+            <p>Follow my instagram, view my<br> posts and contact me<br>through their.</p>
             <button class="instabutton" type="button">Visit Instagram</button>
         </div>
     </div>
+    <form action="" method="get" class="form-example">
+        <input type="text" name="Name" id="name" required>
+        <input type="email" name="Email Address" id="email" required>
+        <input type="subject" name="Subject" id="email" required>
+        <input type="submit" value="Send Message">
+    </form>
 </body>
 </html>
