Added the text area to the form

--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,11 @@
             <button class="instabutton" type="button">Visit Instagram</button>
         </div>
     </div>
-    <form action="" method="get" class="form-example">
+    <form action="" method="get" class="form">
         <input type="text" name="Name" id="name" required>
         <input type="email" name="Email Address" id="email" required>
         <input type="subject" name="Subject" id="email" required>
+        <textarea name="Message" id="message" cols="24" rows="10"></textarea>
         <input type="submit" value="Send Message">
     </form>
 </body>
