Added some color and text to the form

--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
         </div>
     </div>
     <form action="" method="get" class="form">
-        <input type="text" name="Name" id="name" required>
-        <input type="email" name="Email Address" id="email" required>
-        <input type="subject" name="Subject" id="email" required>
-        <textarea name="Message" id="message" cols="24" rows="10"></textarea>
+        <input type="text" name="Name" value="Name" id="name" required>
+        <input type="email" name="Email Address" value="Email Address" id="email" required>
+        <input type="subject" name="Subject" value="Subject" id="email" required>
+        <textarea name="Message" id="message" cols="20" rows="10">Message</textarea>
         <input type="submit" value="Send Message">
     </form>
 </body>
