Switched the javascript for the switching weeks on the classes page back to what it was previously

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <img src="images/questions.svg" alt=""class="questionimg">
             <h3>Questions</h3>
             <p>Fill out this form with your contact<br> information and a question so I can<br> reapond with an answer</p>
-            <button class="questionbutton" type="button">Open contact form</button>
+            <button class="questionbutton" type="button" onclick="form()">Open contact form</button>
         </div>
     </div>
     <div class="instacard">
@@ -44,7 +44,7 @@
             <button class="instabutton" type="button">Visit Instagram</button>
         </div>
     </div>
-    <form action="" method="get" class="form">
+    <form action="" method="get" class="form" id="form">
         <input type="text" name="Name" value="Name" id="name" required>
         <input type="email" name="Email Address" value="Email Address" id="email" required>
         <input type="subject" name="Subject" value="Subject" id="email" required>
