began adding the signup button on the classes page

--- a/classes.html
+++ b/classes.html
@@ -108,5 +108,10 @@
             <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
+    <div class="signup">
+        <div class="contentcard">
+            <h3>Sign Up</h3>
+        </div> 
+    </div>    
 </body>
 </html>
