realigned the signup button

--- a/classes.html
+++ b/classes.html
@@ -109,7 +109,7 @@
         </div>        
     </div>
     <div class="signup">
-        <div class="contentcard">
+        <div class="signupindesign">
             <h3>Sign Up</h3>
         </div> 
     </div>    
