finished the signup button

--- a/classes.html
+++ b/classes.html
@@ -110,7 +110,7 @@
     </div>
     <div class="signup">
         <div class="signupindesign">
-            <h3>Sign Up</h3>
+            <a href="#"><h3>Sign Up</h3></a>
         </div> 
     </div>    
 </body>
