Added the form for the sign up form

--- a/classes.html
+++ b/classes.html
@@ -108,6 +108,15 @@
             <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
+    <div class="signinform">
+        <form action="">
+            <label ">Sign up</label>
+            <input type="text" name="fname" value="First name">
+            <input type="text" name="lname" value="Last name">
+            <input type="text" name="email" value="Email Address">
+            <input type="text" name="pass" value="Password">
+        </form>
+    </div>
     <div class="signup">
         <div class="signupindesign">
             <a href="#"><h3>Sign Up</h3></a>
