began adding style to the form

--- a/classes.html
+++ b/classes.html
@@ -108,8 +108,8 @@
             <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
-    <div class="signinform">
-        <form action="">
+    <div class="signupform">
+        <form class="form">
             <label ">Sign up</label>
             <input type="text" name="fname" value="First name">
             <input type="text" name="lname" value="Last name">
