Added javascript to make form popup

--- a/classes.html
+++ b/classes.html
@@ -108,7 +108,7 @@
             <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
-    <div class="signupform">
+    <div class="signupform" id="form">
         <form class="form">
             <label ">Sign up</label>
             <input type="text" name="fname" value="First name">
@@ -119,7 +119,7 @@
     </div>
     <div class="signup">
         <div class="signupindesign">
-            <a href="#"><h3>Sign Up</h3></a>
+            <a href="#" onclick="form()"><h3>Sign Up</h3></a>
         </div> 
     </div>    
 </body>
