Finally got the content of the form to show up aswell as the outline

--- a/classes.html
+++ b/classes.html
@@ -109,12 +109,13 @@
         </div>        
     </div>
     <div class="signupform" id="form">
-        <form class="form">
+        <form class="form" id="formcontent" >
             <label ">Sign up</label>
-            <input type="text" name="fname" value="First name">
-            <input type="text" name="lname" value="Last name">
-            <input type="text" name="email" value="Email Address">
-            <input type="text" name="pass" value="Password">
+            <input type="text" name="fname" value="First name" />
+            <input type="text" name="lname" value="Last name" />
+            <input type="text" name="email" value="Email Address" />
+            <input type="text" name="pass" value="Password" />
+            <input type="submit" name="joinnow" value="Join Now" />
         </form>
     </div>
     <div class="signup">
