--- a/classes.html
+++ b/classes.html
@@ -108,8 +108,8 @@
             <img src="images/arrowright.svg" alt="" class="right" id="right6">
         </div>        
     </div>
-    <div class="signupform" id="form">
-        <form class="form" id="formcontent" >
+
+        <form class="form" id="form" >
             <label ">Sign up</label>
             <input type="text" name="fname" value="First name" />
             <input type="text" name="lname" value="Last name" />
@@ -117,7 +117,7 @@
             <input type="text" name="pass" value="Password" />
             <input type="submit" name="joinnow" value="Join Now" />
         </form>
-    </div>
+ 
     <div class="signup">
         <div class="signupindesign">
             <a href="#" onclick="form()"><h3>Sign Up</h3></a>
