Began adding css to separate form elements

--- a/classes.html
+++ b/classes.html
@@ -110,7 +110,7 @@
     </div>
 
         <form class="form" id="form" >
-            <label ">Sign up</label>
+            <label ">Sign up</label><br>
             <input type="text" name="fname" value="First name" />
             <input type="text" name="lname" value="Last name" />
             <input type="text" name="email" value="Email Address" />
