Begun add js to make it appear and disappear

--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,12 @@
             <button class="instabutton" type="button"><a href="#">Visit Instagram</a></button>
         </div>
     </div>
-    <div id="form">
-        <form action="" method="get" class="form" >
+        <form class="form" id="form" >
             <input type="text" name="Name" value="Name" id="name" required>
             <input type="email" name="Email Address" value="Email Address" id="email" required>
             <input type="subject" name="Subject" value="Subject" id="email" required>
             <textarea name="Message" id="message" cols="20" rows="10">Message</textarea>
-            <input type="submit" value="Send Message">
-        </form>
-    </div>    
+            <input type="submit" value="Send Message" onclick="form()">
+        </form>    
 </body>
 </html>
