--- a/classes.html
+++ b/classes.html
@@ -118,10 +118,11 @@
             <input type="submit" name="joinnow" value="Join Now" />
         </form>
  
-    <div class="signup">
+    <div class="signup" id="signup">
         <div class="signupindesign">
-            <a href="#" onclick="form()"><h3>Sign Up</h3></a>
+            <a href="#" ><h3>Sign Up</h3></a>
         </div> 
-    </div>    
+    </div>  
+    <div class="backdrop"></div>  
 </body>
 </html>
