--- a/classes.html
+++ b/classes.html
@@ -118,11 +118,11 @@
             <input type="submit" name="joinnow" value="Join Now" />
         </form>
  
-    <div class="signup" id="signup">
+    <div class="signup" id="signup" onclick="showform()">
         <div class="signupindesign">
             <a href="#" ><h3>Sign Up</h3></a>
         </div> 
     </div>  
-    <div class="backdrop"></div>  
+    <div class="backdrop" id="backdrop" onclick="leaveform()"></div>  
 </body>
 </html>
