Irepositioned the text boxes on the form and changed the font and text colour

--- a/classes.html
+++ b/classes.html
@@ -110,12 +110,12 @@
     </div>
 
         <form class="form" id="form" >
-            <label ">Sign up</label><br>
+            <input value="Sign Up" maxlength="0"/>
             <input type="text" name="fname" value="First name" />
             <input type="text" name="lname" value="Last name" />
             <input type="text" name="email" value="Email Address" />
             <input type="text" name="pass" value="Password" />
-            <input type="submit" name="joinnow" value="Join Now" />
+            <button type="button">Join Now</button>
         </form>
  
     <div class="signup" id="signup" onclick="showform()">
