Used read only on the top box and made the input boxes longer for the form

--- a/classes.html
+++ b/classes.html
@@ -110,12 +110,12 @@
     </div>
 
         <form class="form" id="form" >
-            <input value="Sign Up" maxlength="0"/>
+            <input value="Sign Up" maxlength="0" class="label" readonly/>
             <input type="text" name="fname" value="First name" />
             <input type="text" name="lname" value="Last name" />
             <input type="text" name="email" value="Email Address" />
             <input type="text" name="pass" value="Password" />
-            <button type="button">Join Now</button>
+            <button type="button" class="join">Join Now</button>
         </form>
  
     <div class="signup" id="signup" onclick="showform()">
