Added the java script for the two forms

--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Classes</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
     </header>
     <div class="card1">
@@ -111,10 +111,10 @@
 
         <form class="form" id="form" >
             <input value="Sign Up" maxlength="0" class="label" readonly/>
-            <input type="text" name="fname" value="First name" />
-            <input type="text" name="lname" value="Last name" />
-            <input type="text" name="email" value="Email Address" />
-            <input type="text" name="pass" value="Password" />
+            <input type="text" name="fname" placeholder="First name"/>
+            <input type="text" name="lname" placeholder="Last name" />
+            <input type="text" name="email" placeholder="Email Address" />
+            <input type="text" name="pass" placeholder="Password" />
             <button type="button" class="join">Join Now</button>
         </form>
  
