--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <img src="images/questions.svg" alt=""class="questionimg">
             <h3>Questions</h3>
             <p>Fill out this form with your contact<br> information and a question so I can<br> reapond with an answer</p>
-            <button class="questionbutton" type="button" ><a href="" onmouseover="form()">Open contact form</a></button>
+            <button class="questionbutton" type="button" onclick="showform()" id="contact">Open contact form</button>
         </div>
     </div>
     <div class="instacard">
@@ -44,12 +44,14 @@
             <button class="instabutton" type="button"><a href="#">Visit Instagram</a></button>
         </div>
     </div>
-        <form class="form" id="form" >
-            <input type="text" name="Name" value="Name" id="name" required>
-            <input type="email" name="Email Address" value="Email Address" id="email" required>
-            <input type="subject" name="Subject" value="Subject" id="email" required>
-            <textarea name="Message" id="message" cols="20" rows="10">Message</textarea>
-            <input type="submit" value="Send Message" onclick="form()">
-        </form>    
+    <form class="form" id="contactform" >
+        <input value="Contact Us" maxlength="0" class="label" id="input" readonly/>
+        <input type="text" name="fname" placeholder="First name" id="input"/>
+        <input type="text" name="email" placeholder="Email Address" id="input" required/>
+        <input type="text" name="pass" placeholder="Subject" id="input" />
+        <textarea cols="30" rows="8" placeholder="Message" id="input"></textarea>
+        <button type="button" class="join" id="input">Send Message</button>
+    </form>  
+        <div class="backdrop" id="backdrop2" onclick="leaveform()"></div> 
 </body>
 </html>
