Added an alert to the join button

--- a/classes.html
+++ b/classes.html
@@ -111,11 +111,11 @@
 
         <form class="form" id="form" >
             <input value="Sign Up" maxlength="0" class="label" readonly/>
-            <input type="text" name="fname" placeholder="First name"/>
-            <input type="text" name="lname" placeholder="Last name" />
-            <input type="text" name="email" placeholder="Email Address" />
+            <input type="text" name="fname" placeholder="First name" id="data"/>
+            <input type="text" name="lname" placeholder="Last name" id="data1" />
+            <input type="text" name="email" placeholder="Email Address" id="data2" />
             <input type="text" name="pass" placeholder="Password" />
-            <button type="button" class="join">Join Now</button>
+            <button type="button" class="join" onclick="sendsignup()">Join Now</button>
         </form>
  
     <div class="signup" id="signup" onclick="showform()">
