--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <input type="text" name="fname" placeholder="First name" id="input"/>
         <input type="text" name="email" placeholder="Email Address" id="input" required/>
         <input type="text" name="pass" placeholder="Subject" id="input" />
-        <textarea cols="30" rows="8" placeholder="Message" id="input"></textarea>
+        <textarea cols="30" rows="8" placeholder="Message" id="input" required></textarea>
         <button type="button" class="join" id="input">Send Message</button>
     </form>  
         <div class="backdrop" id="backdrop2" onclick="leaveform()"></div> 
