Applyinh media queries to images

--- a/index.html
+++ b/index.html
@@ -32,17 +32,25 @@
     <div class="pillar1">
         <img src="images/pillar1img.svg" class="pillar1img">
         <h3>Yoga</h3>
-        <p>Yoga is an excersise that focusses on movement, breathing and posture to bring spiritual awareness to the invidivduals body and mind, ultimately improving the body and mind. Practising yoga can greatly improve the wellbeing of the individual as it also promotes relaxation, which can help improve sleep as well as positively affect the individuals health. This promotes a clearer as well as a calmer mind.</p>
+        <p class="pillt">Yoga is an excersise that focusses on movement, breathing and posture to bring spiritual awareness to the invidivduals body and mind, ultimately improving the body and mind. Practising yoga can greatly improve the wellbeing of the individual as it also promotes relaxation, which can help improve sleep as well as positively affect the individuals health. This promotes a clearer as well as a calmer mind.</p>
     </div>
     <div class="pillar2">
         <img src="images/pillar2img.svg" class="pillar2img">
         <h3>Positivity</h3>
-        <p>Positivity is an important aspect to an individuals wellbeing and their life. It allows more openess to diffenrent activities that support wellbeing, for example the positive air around yoga makes participants more comfortable while carrying out the movements. Positivity can lead into the individuals personal life by allowing them to be more optimistic, which lets them handle difficult situations.</p>
+        <p class="pillt">Positivity is an important aspect to an individuals wellbeing and their life. It allows more openess to diffenrent activities that support wellbeing, for example the positive air around yoga makes participants more comfortable while carrying out the movements. Positivity can lead into the individuals personal life by allowing them to be more optimistic, which lets them handle difficult situations.</p>
     </div>
     <div class="pillar3">
         <img src="images/pillar3img.svg" class="pillar3img">
         <h3>Strength</h3>
-        <p>Strength is important to wellbeing, as carrying out activities that support wellbeing results in a stong body and mind. Having a strong mind can allow an individual to endure tough situations also as well as focusing on achieving harmony. Having a stronger body allows an individual to be healthier and be more comfortable in their own body which is important when it comes to awarness and spiritality.</p>
+        <p class="pillt">Strength is important to wellbeing, as carrying out activities that support wellbeing results in a stong body and mind. Having a strong mind can allow an individual to endure tough situations also as well as focusing on achieving harmony. Having a stronger body allows an individual to be healthier and be more comfortable in their own body which is important when it comes to awarness and spiritality.</p>
     </div>
+    <footer id="header">
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="classes.html">Classes</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
